Merged in visitor branch - berlios bug prevents using svn merge directly, rubbish